# ConVoke

./: .gitignore  PROJECT.md  README.md  pyproject.toml
src/convoke/: cli.py  config.py  daemon.py  logging.py  models.py  notifier.py  router.py  watcher.py
